2008-01-17  Torsten Rahn  <rahn@kde.org>

    * src/QtMainWindow.{cpp,h}:
    * src/lib/MarbleWidget.{cpp,h}:
    * src/lib/SunLocator.{cpp,h}:
    * src/lib/ExtDateTime.{cpp,h}:
    * src/lib/TileLoader.{cpp,h}:
    * src/lib/TextureTile.{cpp,h}:
    * src/lib/MarbleModel.{cpp,h}:
    * src/lib/CMakeLists.txt:
    * src/ControlView.h:

    - "Let The Sunshine In"

    ("You Are The Sunshine Of My Life" could be misunderstood ... ;-)

    Patch by David Roberts that enables Sunshading for
    24bpp maps (e.g. the Satellite map). Still needs a
    bit of work to make it work properly and fast 
    (like avoiding setPixel(), etc.).

2008-01-17  Torsten Rahn  <rahn@kde.org>

    * src/lib/TextureColorizer.cpp:
	- Optimizations.
    * src/lib/AbstractScanlineTextureMapper.{cpp,h}:
    * src/lib/MarbleWidget.{cpp,h}:
    * src/lib/MarbleModel.{cpp,h}:
    * src/lib/GlobeScanlineTextureMapper.cpp:
    * src/lib/FlatScanlineTextureMapper.cpp:
	- First steps towards tile preloading
	- Removing the headingTowards stuff as I don't need it.

    * src/lib/MarbleSettingsWidget.ui:
	- minor change

2008-01-16  Inge Wallin  <inge@lysator.liu.se>

	Fix bug that made min/max zoom in .dgml files not work.
	* src/lib/MapTheme.cpp (open): Compare against lower cased
	names minimumzoom and maximumzoom.

2008-01-16  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleSettingsWidget.ui:

    - Committing Settings Widget for KDE 4.1. This 
    mockup-stage .ui file shows about what I have in mind
    in terms of features being supported for KDE 4.1 and 
    how they should get offered in the settings dialog.

2008-01-15  Inge Wallin  <inge@lysator.liu.se>

	Complete min/maximumZoom in .dgml files.
	* src/lib/MapTheme.cpp (open): Provide default values for
	minimumZoom and maxmimumZoom
	(open): bug fix in parsing.
	* src/lib/MarbleModel.h (setMinimumZoom, setMaximiumZoom): removed
	* src/lib/MarbleModel.cpp (minimumZoom, maximumZoom): Use values
	from MapTheme