@@ -1,3 +1,9 @@
+2008-01-17  Inge Wallin  <inge@lysator.liu.se>
+
+	Cleaning
+	* src/lib/MarbleModel.cpp ():Follow coding standards
+	* src/lib/TileCreator.cpp ():Follow coding standards
+	
 2008-01-17  Torsten Rahn  <rahn@kde.org>
 
     * src/QtMainWindow.{cpp,h}:
